fixmap editor left panel not collapsing

--- a/src/components/CollapsiblePanel/CollapsiblePanel.module.scss
+++ b/src/components/CollapsiblePanel/CollapsiblePanel.module.scss
@@ -1,5 +1,5 @@
 .is-collapsible {
-	flex-shrink: 1;
+	flex-shrink: 1 !important;
 
 	> header {
 		align-items: center;
